# video-srt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
references/: cantonese-conversion-table.md  kalafina-concert-workflow.md  sensevoice-japanese-artifacts.md
video_srt/: __init__.py  asr.py  audio.py  cli.py  srt_utils.py
video_srt/scripts/: fix_subtitle_gaps.py  process_chunks.py
