[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "video-srt"
version = "3.0.0"
description = "Language-agnostic video-to-SRT pipeline: ASR + LLM-driven language detection, normalization, singing removal, and translation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "M Y"}]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
video-srt = "video_srt.cli:main"

[tool.setuptools.packages.find]
include = ["video_srt*"]

[tool.setuptools.package-data]
"video_srt.scripts" = ["*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
faster-whisper = [
    "faster-whisper>=1.0.0",
]
